# api/inference/zkclient/swagger.yml
@@ -24,7 +24,7 @@ paths:
           $ref: "#/responses/Error"
   /signature:
     post:
-      operationId: generateSignature
+      operationId: signature
       parameters:
         - name: body
           in: body
@@ -35,9 +35,11 @@ paths:
               requests:
                 type: array
                 items:
-                  $ref: "#/definitions/request"
-              privkey:
+                  $ref: "#/definitions/requestResponse"
+              privKey:
                 $ref: "#/definitions/privateKey"
+              signResponse:
+                type: boolean
       responses:
         "200":
           description: OK
@@ -61,15 +63,19 @@ paths:
           required: true
           schema:
             type: object
+            required:
+              - signResponse
             properties:
               requests:
                 type: array
                 items:
-                  $ref: "#/definitions/request"
-              pubkey:
+                  $ref: "#/definitions/requestResponse"
+              pubKey:
                 $ref: "#/definitions/publicKey"
               signatures:
                 $ref: "#/definitions/signatures"
+              signResponse:
+                type: boolean
       responses:
         "200":
           description: OK
@@ -92,7 +98,7 @@ paths:
               requests:
                 type: array
                 items:
-                  $ref: "#/definitions/request"
+                  $ref: "#/definitions/requestResponse"
               l:
                 type: integer
               pubkey:
@@ -157,12 +163,16 @@ paths:
               requests:
                 type: array
                 items:
-                  $ref: "#/definitions/request"
+                  $ref: "#/definitions/requestResponse"
               l:
                 type: integer
-              pubkey:
+              reqPubkey:
                 $ref: "#/definitions/publicKey"
-              signatures:
+              resPubkey:
+                $ref: "#/definitions/publicKey"
+              reqSignatures:
+                $ref: "#/definitions/signatures"
+              resSignatures:
                 $ref: "#/definitions/signatures"
       responses:
         "200":
@@ -209,17 +219,26 @@ definitions:
       type: array
       items:
         type: integer
-  request:
+  requestResponse:
     type: object
     properties:
       nonce:
         type: string
-      fee:
+      reqFee:
+        type: string
+      resFee:
         type: string
       userAddress:
         type: string
       providerAddress:
         type: string
+      teeSignerAddress:
+        type: string
+      requestHash:
+        type: array
+        items:
+          type: integer
+        description: The hash of the request, generated the combination of nonce, userAddress and providerAddress
   ErrorResponse:
     type: object
     properties:
